[package]
name = "finality-grandpa"
version = "0.14.4"
description = "PBFT-based finality gadget for blockchains"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
license = "Apache-2.0"
repository = "https://github.com/axia-tech/finality-grandpa"
edition = "2018"

[dependencies]
either = { version = "1.6", default-features = false }
futures = { version = "0.3", default-features = false }
futures-timer = { version = "3.0", optional = true }
log = { version = "0.4", optional = true }
num = { package = "num-traits", version = "0.2", default-features = false }
axia-scale-codec = { git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", default-features = false, optional = true, features = [
    "derive",
] }
parking_lot = { version = "0.11", optional = true }
rand = { version = "0.8", optional = true }
scale-info = { version = "2.1", default-features = false, optional = true, features = [
    "derive",
] }

[dev-dependencies]
quickcheck = "1.0"
rand = "0.8"

[features]
default = ["std"]
std = [
    "axia-scale-codec/std",
    "num/std",
    "parking_lot",
    "log",
    "futures-timer",
    "futures/executor",
    "scale-info/std",
]
derive-codec = ["axia-scale-codec", "scale-info"]
test-helpers = ["fuzz-helpers", "rand", "std"]
fuzz-helpers = []
